--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     </head>
     <body>
         <div class="container">
-            <div class="left_side"></div>
+            <div class="left_side">
+                <div class="profile_text">
+                    <div class="image_box">
+                        <img src="/images/image.JPG" alt="profile image">
+                    </div>
+                    <h2>Baha Eddine Hamdi<br><span>Web Developer</span></h2>
+                </div>
+            </div>
             <div class="right_side"></div>
         </div>
     </body>
