adding the academic experiences

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport">
         <title>Welcome to my website</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -13,6 +14,55 @@
                         <img src="/images/image.JPG" alt="profile image">
                     </div>
                     <h2>Baha Eddine Hamdi<br><span>Web Developer</span></h2>
+                </div>
+                <div class="contact_info">
+                    <h3 class="title">Contact Information</h3>
+                    <ul>
+
+                        <li>
+                            <span class="icon"><i class="fa fa-phone-square" aria-hidden="true"></i></span>
+                            <span class="text">+216 44 639 642</span>
+                        </li>
+
+                        <li>
+                            <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                            <span class="text">Baha.etc@gmail.com</span>
+                        </li>
+
+                        <li>
+                            <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
+                            <span class="text">https://www.linkedin.com/in/bahaeddine-hamdi/</span>
+                        </li>
+
+                        <li>
+                            <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+                            <span class="text">www.bahaeddinehamdi.com</span>
+                        </li>
+
+                        <li>
+                            <span class="icon"><i class="fa fa-location-arrow" aria-hidden="true"></i></span>
+                            <span class="text">Mahrés, Sfax, Tunisia</span>
+                        </li>
+                    </ul>
+                </div>
+                <br>
+                <div class="education_info">
+                    <h3 class="title">Academic Experiences</h3>
+                    <ul>
+                        <li>
+                            <h5>2019-2022</h5>
+                            <h4>Informatique De Gestion</h4>
+                            <h4>FSEG Sfax</h4>
+                        </li>
+
+                        <li>
+                            <h5>2013-2016</h5>
+                            <h4>Bac Economie et Gestion</h4>
+                            <h4>Lycée Ali Bourguiba Mahres</h4>
+                        </li>
+                    </ul>
+
+                       
                 </div>
             </div>
             <div class="right_side"></div>
