--- a/index.html
+++ b/index.html
@@ -60,9 +60,33 @@
                             <h4>Bac Economie et Gestion</h4>
                             <h4>Lycée Ali Bourguiba Mahres</h4>
                         </li>
-                    </ul>
+                    </ul>   
+                </div>
+                <br>
+                <div class="languages_info">
+                    <h3 class="title">Languages</h3>
+                    <ul>
+                        <li>
+                            <span class="text">English</span>
+                            <span class="percent">
+                                <div style="width: 80%;"></div>
+                            </span>
+                        </li>
 
-                       
+                        <li>
+                            <span class="text">French</span>
+                            <span class="percent">
+                                <div style="width: 65%;"></div>
+                            </span>
+                        </li>
+
+                        <li>
+                            <span class="text">Arabic</span>
+                            <span class="percent">
+                                <div style="width: 100%;"></div>
+                            </span>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="right_side"></div>
