adding the right side of the CV including [Profile description, Pro Exper , and Pro Exper]

--- a/index.html
+++ b/index.html
@@ -89,7 +89,105 @@
                     </ul>
                 </div>
             </div>
-            <div class="right_side"></div>
+            <div class="right_side">
+                <div class="about">
+                    <h2 class="title2">Profile</h2>
+                    <p>The sun hung low on the horizon, casting long shadows across the tranquil meadow. Birds chirped melodiously in the nearby trees, their songs harmonizing with the gentle rustling of leaves in the breeze. It was a perfect afternoon, the kind that seemed to stretch on forever, where time stood still in the embrace of nature's beauty. As I sat there, I couldn't help but feel a profound sense of peace and gratitude for the simple joys of life</p>
+                </div>
+                <div class="about">
+                    <h2 class="title2">Professional Experiences</h2>
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>Jun.2023 - Jul.2023</h5>
+                            <h5>OceanBit</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Junior React Developer (Internship)</h4>
+                            <p>Remote internship at OceanBit: Gained hands-on experience in software development cycles and developed fundamental competence in React</p>
+                        </div>  
+                    </div>
+                    
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>Jun.2023 - Jul.2023</h5>
+                            <h5>OceanBit</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Junior React Developer (Internship)</h4>
+                            <p>Remote internship at OceanBit: Gained hands-on experience in software development cycles and developed fundamental competence in React</p>
+                        </div>  
+                    </div>
+
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>Jun.2023 - Jul.2023</h5>
+                            <h5>OceanBit</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Junior React Developer (Internship)</h4>
+                            <p>Remote internship at OceanBit: Gained hands-on experience in software development cycles and developed fundamental competence in React</p>
+                        </div>  
+                    </div>
+
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>Jun.2023 - Jul.2023</h5>
+                            <h5>OceanBit</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Junior React Developer (Internship)</h4>
+                            <p>Remote internship at OceanBit: Gained hands-on experience in software development cycles and developed fundamental competence in React</p>
+                        </div>  
+                    </div>
+
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>Jun.2023 - Jul.2023</h5>
+                            <h5>OceanBit</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Junior React Developer (Internship)</h4>
+                            <p>Remote internship at OceanBit: Gained hands-on experience in software development cycles and developed fundamental competence in React</p>
+                        </div>  
+                    </div>
+
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>Jun.2023 - Jul.2023</h5>
+                            <h5>OceanBit</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Junior React Developer (Internship)</h4>
+                            <p>Remote internship at OceanBit: Gained hands-on experience in software development cycles and developed fundamental competence in React</p>
+                        </div>  
+                    </div>
+
+                </div>
+
+                <div class="about skills">
+                    <h2 class="title2">Professional Skills</h2>
+                    <div class="box">
+                        <h4>Html</h4>
+                        <div class="percent">
+                            <div style="width: 30%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>CSS</h4>
+                        <div class="percent">
+                            <div style="width: 30%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>JavaScript</h4>
+                        <div class="percent">
+                            <div style="width: 30%;"></div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
     </body>
 </html>
