--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                         </li>
 
                         <li>
+                            <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+                            <span class="text">https://www.github.com/BohBOhTN</span>
+                        </li>
+
+                        <li>
                             <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
                             <span class="text">www.beh-consulting.com</span>
                         </li>
@@ -43,6 +48,8 @@
                             <span class="icon"><i class="fa fa-location-arrow" aria-hidden="true"></i></span>
                             <span class="text">Mahrés, Sfax, Tunisia</span>
                         </li>
+
+
                     </ul>
                 </div>
                 <br>
@@ -97,7 +104,7 @@
             <div class="right_side">
                 <div class="about">
                     <h2 class="title2">Profile</h2>
-                    <p>Je suis Baha Eddine Hamdi, étudiant en Génie Informatique à l'IIT Sfax. J'ai une solide formation en développement web avec des compétences en HTML, CSS, JavaScript et SAP. Actuellement, je me spécialise en informatique en nuage et DevOps, en me concentrant sur AWS. J'ai une petite fondation sur le cloud et les outils DevOps et je cherche à élargir mes expériences. Passionné par l'apprentissage continu.</p>
+                    <p>Je suis Baha Eddine Hamdi, étudiant en Génie Informatique à l'IIT Sfax. J'ai une petite formation en développement web avec des compétences en HTML, CSS, JavaScript. Actuellement, je me spécialise en informatique en nuage et DevOps, en me concentrant sur AWS. J'ai une petite fondation sur le cloud et les outils DevOps et je cherche à élargir mes expériences. Passionné par l'apprentissage continu.</p>
                 </div>
                 <div class="about">
                     <h2 class="title2">EXPERIENCES PROFESSIONNELLES</h2>
@@ -213,13 +220,13 @@
                     <div class="box">
                         <h4>Html</h4>
                         <div class="percent">
-                            <div style="width: 30%;"></div>
+                            <div style="width: 85%;"></div>
                         </div>
                     </div>
                     <div class="box">
                         <h4>CSS</h4>
                         <div class="percent">
-                            <div style="width: 30%;"></div>
+                            <div style="width: 65%;"></div>
                         </div>
                     </div>
                     <div class="box">
@@ -228,7 +235,48 @@
                             <div style="width: 30%;"></div>
                         </div>
                     </div>
-
+                    <div class="box">
+                        <h4>Git</h4>
+                        <div class="percent">
+                            <div style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Python</h4>
+                        <div class="percent">
+                            <div style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Linux</h4>
+                        <div class="percent">
+                            <div style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>SQL</h4>
+                        <div class="percent">
+                            <div style="width: 85%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Network</h4>
+                        <div class="percent">
+                            <div style="width: 77%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Selenium</h4>
+                        <div class="percent">
+                            <div style="width: 85%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>AWS</h4>
+                        <div class="percent">
+                            <div style="width: 35%;"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="about">
